# deepanalyze-stataskills

./: .gitignore  LICENSE  NOTICE.md  README.md
DeepAnalyze/: CONTRIBUTION.md  LICENSE  README.md  deepanalyze.py  run.py  (+2 more)
stataskills_demo/: pyproject.toml
stataskills_demo/artifacts/: stataskills_call_matrix.json  stataskills_call_matrix.md
stataskills_demo/artifacts/reports/: growth.md  growth_raw.md  growth_response.json  growth_validation.json  hospital.md  hospital_raw.md  hospital_response.json  hospital_validation.json  policy.md  policy_raw.md  policy_response.json  policy_validation.json  summary.json
stataskills_demo/data/datasets83/: ab_test_satisfaction.csv  accidents_did.csv  bulb_lifespan_data.csv  chemo_data.csv  conversion_data.csv  diet_study.csv  diet_study2.csv  er_arrivals.csv  gdp_growth.csv  gene_p_values.csv  high_dim_regression.csv  hospital_stay.csv  latent_structure.csv  p_value_dataset.csv  placebo_did.csv  synthetic_gdp_reform.csv  teaching_methods_data.csv  tourism.csv  website_session_data.csv  whas500.csv
stataskills_demo/docs/: deepanalyze_stataskills_integration.md
stataskills_demo/examples/: deepanalyze_growth_task.md  deepanalyze_hospital_task.md  deepanalyze_policy_task.md  deepanalyze_showcase_driver.py  deepanalyze_showcase_task.md  deepanalyze_stataskills_smoke.py  run_deepanalyze_demo_tasks.py  run_deepanalyze_hospital_report.py  run_deepanalyze_showcase_report.py  run_webui_stataskills_demo.py
stataskills_demo/scripts/: verify_stataskills_all_tools.py
stataskills_demo/stataskills/: README.md  __init__.py  tools.py
(+60 files in other folders)
